# ssft-test

./: AGENTS.md  LICENSE  README.md  pyproject.toml
tests/: test_s2fft_build.py  test_s2fft_import.py
