[project]
authors = [{ name = "Jess Robertson", email = "jess.robertson@niwa.co.nz" }]
description = "Add a short description here"
name = "ssft-test"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
jax = "*"
s2fft = { git = "https://github.com/astro-informatics/s2fft.git" }
ssft_test = { path = ".", editable = true }
